--- a/views/vehicles.pug
+++ b/views/vehicles.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}. My name is Anakapalli Phaneendra Babu
-  - let results=[{vehicle_type:"Sedan",brand:"Ford",price:"18000"},{vehicle_type:"Hatchback",brand:"Swift",price:"12000"},{vehicle_type:"Suv",brand:"Ram",price:"15000"}]
+  - let tems = results
   div(class="container-fluid")
     div(class="row")
       each vehicles, index in results
