--- a/views/vehicledetail.pug
+++ b/views/vehicledetail.pug
@@ -1,6 +1,10 @@
 extends layout
 block content
   h1= title
+
+  if (toShow == null)
+      h2 No instance to Detail 
+  else 
   - let vehicleid = toShow._id
   - let vehicletype = toShow.vehicle_type
   - let vehiclebrand = toShow.brand
