--- a/views/vehicles.pug
+++ b/views/vehicles.pug
@@ -5,11 +5,16 @@ block content
   p Welcome to #{title}. My name is Anakapalli Phaneendra Babu
   - let tems = results
   div(class="container-fluid")
-    div(class="row")
+    div(class="row m-1")
       each vehicles, index in results
-        div(class="col-sm-2" onclick=`buy(${index+1})`) #{vehicles.vehicle_type} - #{vehicles.brand} - $#{vehicles.price}
+        - let destination = `dispatch(\"/vehicles/update?id=${vehicles._id}\")`
+        div(class="row-sm-2 m-1" onclick=`buy(${index+1})`) #{vehicles.vehicle_type} - #{vehicles.brand} - $#{vehicles.price}
+          button.btn( class="btn-primary ml-1", onclick= destination) Update
 
   script.
     function buy(index){
       alert(`You purchased item ${index}`);
+    }
+    function dispatch(path){
+      window.location.href=path
     }     
