--- a/views/index.pug
+++ b/views/index.pug
@@ -1,26 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  p i love superheros
+ if (!user)
+  a(href="/login") Login
   br
-  - var btnType = 'success'
-  - var btnSize = 'xl'
-  button(type='button' onclick="moreClaps()" class='btn btn-' + btnType + ' btn-' + btnSize) press me
-
-  div(id="target") Clap for me
+  a(href="/register") Register
+ if (user)
+  p You are currently logged in as #{user.username}
+  a(href="/vehicles") Take me to Vehicle
   br
-  a(href='/vehicles') Click here for vehicles
-  br
-  a(href='/selector') Click here for selector
-  br
-  a(href='/addmods/?rows=3&cols=4') Click here for addmods
-
-  script.
-    var clap_count=0;
-    function moreClaps(){
-      clap_count =clap_count+2;
-      console.log("moreClaps method implemented");
-      document.getElementById("target").innerHTML = `Clap ${clap_count} times.`;
-    }
+  a(href="/logout") Logout 
