--- a/views/vehicles.pug
+++ b/views/vehicles.pug
@@ -4,12 +4,19 @@ block content
   h1= title
   p Welcome to #{title}. My name is Anakapalli Phaneendra Babu
   - let tems = results
+  br
+  p Click here to add new book to the collection
+    button(class="btn btn-success m-2" onclick="dispatch('/vehicles/create')") Create
   div(class="container-fluid")
     div(class="row m-1")
       each vehicles, index in results
         - let destination = `dispatch(\"/vehicles/update?id=${vehicles._id}\")`
+        - let destination1 = `dispatch(\"/vehicles/detail?id=${vehicles._id}\")`
+        - let destination2 = `dispatch(\"/vehicles/delete?id=${vehicles._id}\")`
         div(class="row-sm-2 m-1" onclick=`buy(${index+1})`) #{vehicles.vehicle_type} - #{vehicles.brand} - $#{vehicles.price}
           button.btn( class="btn-primary ml-1", onclick= destination) Update
+          button.btn( class="btn-info ml-1", onclick= destination1) Detail
+          button.btn( class="btn-danger ml-1", onclick= destination2) Delete
 
   script.
     function buy(index){
